@@ -18,7 +18,6 @@ rb-crafter-blueprint=A temporary blueprint provided by the Recipe Book to quickl
 
 [rb-gui]
 add-to-favorites=Add to favorites
-back-to=Back to __1__\nRight-click to go home
 blueprint-not-available=A blueprint is not available for this crafter.
 burnable-in=Burnable in (__1__)
 category=Category:
@@ -35,7 +34,6 @@ crafting-time=Crafting time:
 favorites=Favorites
 fixed-recipe=Fixed recipe:
 fluid=Fluid
-forward-to=Forward to __1__
 fuel-categories=Fuel categories:
 fuel-category=Fuel category:
 fuel-value=Fuel value:
@@ -43,7 +41,7 @@ general=General
 hidden-abbrev=(H)
 hidden=Hidden
 history=History
-home=Home
+home-page=Home page
 ingredient-in=Ingredient in (__1__)
 ingredients-tooltip=Ingredients:
 ingredients=Ingredients (__1__)
@@ -54,6 +52,8 @@ lab=Lab
 made-in=Made in (__1__)
 material=Material
 mined-from=Mined from (__1__)
+navigate-backward=Go backward.
+navigate-forward=Go forward.
 offshore-pump=Offshore pump
 open-quick-reference=Open quick reference panel
 per-second= / s
@@ -100,6 +100,8 @@ setting-use_internal_names-tooltip=Use internal prototype names for objects and 
 setting-use_internal_names=Use internal names [img=info]
 settings=Settings
 shift-click-to-get-blueprint=Shift + click to get a blueprint.
+shift-click-to-jump-to-back=Shift + click to jump to the back.
+shift-click-to-jump-to-front=Shift + click to jump to the front.
 stack-size=Stack size:
 technology=Technology
 unlocked-by=Unlocked by (__1__)
